# lingua-flow

./: README.md  TODOS.md  WORK.md  main.py  pyproject.toml  setup.sh
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  note.txt
backend/app/models/: note.txt
backend/app/services/: deepgram.py  gpt_prompt.py  openai_client.py
backend/app/utils/: helpers.py
backend/util/: requester.py
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  MessageBubble.tsx  MessageList.tsx  RecordingControls.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/types/: index.ts
lingua_flow/: config.py  main.py  util.py
lingua_flow/api_clients/: deepgram.py  openai_client.py
samples/: deepgram_sample_response.json
