[project]
name = "myproject"
version = "0.1.0"

dependencies = [
  "uvicorn",
  "fastapi",
  "requests",
  "types-requests",
  "openai",
  "python-dotenv",
  "black",
  "isort",
  "flake8",
  "mypy",
  "pre-commit"
]

[tool.hatch.envs.default.scripts]
dev = "uvicorn app.main:app --reload"
prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
test = "pytest"
format = "black ./ && isort ./"
lint = "flake8 ./"
typecheck = "mypy ./"
check = "hatch run format && hatch run lint && hatch run typecheck"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
